<resources>
    <string name="app_name">C_0</string>
    <string name="text_result"></string>
    <string name="text_c">C</string>
    <string name="text_percent">%</string>
    <string name="text_del">del</string>
    <string name="text_division">/</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_mul">*</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_minus">-</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_plus">+</string>
    <string name="text_00">00</string>
    <string name="text_0">0</string>
    <string name="text_comma">.</string>
    <string name="text_equally">=</string>
    <string name="text_result_output"></string>
    <string name="DivisionBy0">Деление на 0!</string>
    <string name="all_numbers">1234567890</string>
    <string name="zero">0</string>

</resources>